# docs/swagger.json
@@ -218,6 +218,55 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "book"
+                ],
+                "summary": "Update book",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Cover file",
+                        "name": "cover",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Author book",
+                        "name": "author",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title book",
+                        "name": "title",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Book id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/update_book.Output"
+                        }
+                    }
+                }
             }
         },
         "/dictionary/lookup": {
@@ -248,6 +297,31 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/lookup.Output"
+                        }
+                    }
+                }
+            }
+        },
+        "/file/public": {
+            "get": {
+                "tags": [
+                    "file"
+                ],
+                "summary": "Get file data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "path",
+                        "name": "path",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
                         }
                     }
                 }
@@ -340,6 +414,9 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "cover": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "string"
@@ -665,6 +742,14 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "update_book.Output": {
+            "type": "object",
+            "properties": {
+                "book": {
+                    "$ref": "#/definitions/domain.Book"
                 }
             }
         }
